WW-5720 test(rest): collect captured log messages with Stream.toList
Sonar S6204.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>